--- a/src/package.json
+++ b/src/package.json
@@ -3,5 +3,8 @@
   "android": {
     "v8Flags": "--expose_gc",
     "markingMode": "none"
+  },
+  "devDependencies": {
+    "@nativescript/schematics": "^1.0.0"
   }
 }
