--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nativescript/theme": "2.3.3",
     "nativescript-angular": "8.21.0",
     "nativescript-theme-core": "2.0.24",
+    "nativescript-ui-listview": "^8.1.0",
     "nativescript-ui-sidedrawer": "8.0.0",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.4.0",
